[package]
name = "twitch_channel_points"
version = "0.1.0"
authors = ["adeilh <madeel234@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.1", features = ["json", "multipart", "blocking", "cookies"] }
tokio = { version = "1.2.0", features = ["full"] }
serde = { version ="1.0.125", features = ["derive"]}
serde_json = "1.0.64"